// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KnownIndividualsCard should render 1`] = `
<div>
  <div
    class="card card-root known-individuals-card-root"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title"
      >
        Known Individuals
      </div>
    </div>
    <div
      class="table-responsive table-root flex-grow-1"
    >
      <table
        class="table table-autofit table-hover table-heading-nowrap table-nowrap"
      >
        <thead>
          <tr>
            <th
              class="table-head-title name"
            >
              Individual
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class="name-cell-root name"
            >
              <div
                class="content-container"
              >
                <div
                  class="text-truncate"
                >
                  <div
                    class="table-title text-truncate"
                  >
                    <a
                      class="text-truncate"
                      href="/workspace/23/123/contacts/individuals/known-individuals/0"
                    >
                      Foo Bar
                    </a>
                  </div>
                  <div
                    class="secondary-info text-truncate"
                  >
                    Developer
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="name-cell-root name"
            >
              <div
                class="content-container"
              >
                <div
                  class="text-truncate"
                >
                  <div
                    class="table-title text-truncate"
                  >
                    <a
                      class="text-truncate"
                      href="/workspace/23/123/contacts/individuals/known-individuals/1"
                    >
                      Foo Bar
                    </a>
                  </div>
                  <div
                    class="secondary-info text-truncate"
                  >
                    Developer
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="name-cell-root name"
            >
              <div
                class="content-container"
              >
                <div
                  class="text-truncate"
                >
                  <div
                    class="table-title text-truncate"
                  >
                    <a
                      class="text-truncate"
                      href="/workspace/23/123/contacts/individuals/known-individuals/2"
                    >
                      Foo Bar
                    </a>
                  </div>
                  <div
                    class="secondary-info text-truncate"
                  >
                    Developer
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
        href="/workspace/23/123/contacts/accounts/23/individuals"
      >
        View All Individuals
        <svg
          class="lexicon-icon lexicon-icon-angle-right-small ml-2"
          role="presentation"
        >
          <use
            href="#angle-right-small"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`KnownIndividualsCard should render w/ NoResultsDisplay 1`] = `
<div>
  <div
    class="card card-root known-individuals-card-root"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title"
      >
        Known Individuals
      </div>
    </div>
    <div
      class="no-results-root flex-grow-1"
    >
      <div
        class="no-results-content spacer"
      >
        <div
          class="h4 no-results-title"
        >
          There are no individuals found.
        </div>
        <div
          class="no-results-description"
        >
          <span
            class="mr-1"
          >
            Check back later to verify if data has been received from your data sources.
          </span>
          <a
            class=""
            href="https://learn.liferay.com/w/dxp/personalization/analytics-cloud/people/individuals-analytics"
            rel="noreferrer noopener"
            target="_blank"
          >
            Learn more about individuals.
            <span
              class="sr-only"
            >
              (Opens a new window)
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
        href="/workspace/23/123/contacts/accounts/23/individuals"
      >
        View All Individuals
        <svg
          class="lexicon-icon lexicon-icon-angle-right-small ml-2"
          role="presentation"
        >
          <use
            href="#angle-right-small"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
